# python-poetry-with-unittest

./: .dockerignore  Dockerfile  Makefile  Readme.md  bashrc  pyproject.toml
src/: main.py  name.py
tests/: test_main.py
